logs/kickstart.log
Listing '.'...
Listing './bin'...
Compiling './bin/kickstart.py'...
***   File "./bin/kickstart.py", line 33
    print '%s%s' % (template, description)
               ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/kickstart-0.297.egg-info'...
Listing './lib/python3.5/site-packages/kickstarter'...
Listing './lib/python3.5/site-packages/kickstarter/templates'...
Listing './lib/python3.5/site-packages/kickstarter/templates/default'...
Listing './lib/python3.5/site-packages/kickstarter/templates/default/default'...
Listing './lib/python3.5/site-packages/kickstarter/templates/default/default/conf'...
Listing './lib/python3.5/site-packages/kickstarter/templates/default/default/templates'...
Listing './lib/python3.5/site-packages/kickstarter/templates/default/server'...
Listing './lib/python3.5/site-packages/kickstarter/templates/default/server/live'...
Listing './lib/python3.5/site-packages/kickstarter/templates/default/server/local'...
Listing './lib/python3.5/site-packages/kickstarter/templates/default/server/stage'...
Listing './lib/python3.5/site-packages/kickstarter/templates/default/server/test'...
Listing './lib/python3.5/site-packages/kickstarter/templates/default/static'...
Listing './lib/python3.5/site-packages/kickstarter/templates/default/static/css'...
Listing './lib/python3.5/site-packages/kickstarter/templates/flask'...
Listing './lib/python3.5/site-packages/kickstarter/templates/flask/flask'...
Listing './lib/python3.5/site-packages/kickstarter/templates/flask/flask/conf'...
Listing './lib/python3.5/site-packages/kickstarter/templates/flask/flask/templates'...
Listing './lib/python3.5/site-packages/kickstarter/templates/flask/server'...
Listing './lib/python3.5/site-packages/kickstarter/templates/flask/server/live'...
Listing './lib/python3.5/site-packages/kickstarter/templates/flask/server/local'...
Listing './lib/python3.5/site-packages/kickstarter/templates/flask/server/stage'...
Listing './lib/python3.5/site-packages/kickstarter/templates/flask/server/test'...
Listing './lib/python3.5/site-packages/kickstarter/templates/flask/static'...
Listing './lib/python3.5/site-packages/kickstarter/templates/flask/static/css'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
